5일차/emptydir.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sidecar
spec:
  containers:
    - name: app
      image: alpine
      args:
        - /bin/sh
        - -c
        - while true; do echo "$(date)" >> /var/log/example.log; sleep 1; done
      volumeMounts:
        - name: varlog
          mountPath: /var/log/
    - name: sidecar
      image: alpine
      args: [/bin/sh, -c, "tail -f /var/log/example.log"]
      volumeMounts:
        - name: varlog
          mountPath: /var/log/
  volumes:
    - name: varlog
      emptyDir: {}
