5일차/nginx1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx1-service
spec:
  selector:
    app: nginx1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
