5일차/nginx2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx2-service
spec:
  selector:
    app: nginx2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
